--- a/apps/www/src/components/preview/preview.module.css
+++ b/apps/www/src/components/preview/preview.module.css
@@ -1,7 +1,8 @@
 .preview {
-  padding: var(--rs-space-2);
+  padding: var(--rs-space-10);
   width: 100%;
-  height: 100%;
+  height: stretch;
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
